--- a/index.html
+++ b/index.html
@@ -71,7 +71,61 @@
     <!-- Custom styles for this template -->
     <link href="form-validation.css" rel="stylesheet">
   </head>
-<body>
+
+  <body class="bg-light">
     
-</body>
+<div class="container">
+  <main>
+    <div class="py-5 text-center">
+
+      <img src="carrinho.png" alt="carrinho de compras" width="90px">
+      
+      <a href="cardapio.html"><button class="btn btn-light bg-dark-blur border-0 color-white btn-login-cadastro" style="border-radius: 10px;float:right; margin-top: 1%;margin-right: 1%;" type="button" data-toggle="modal" data-target="#modal-signup" display="inline-block" justify-content: space-around>Voltar</button></a>
+
+      <h2>Mid Carrinho</h2>
+      <p class="lead">Informe abaixo seus dados para pagamento e endereço de entrega. Não esqueça de conferir os produtos e quantidades no carrinho antes de finalizar o pagamento.</p>
+    </div>
+
+    <div class="row g-5">
+      <div class="col-md-5 col-lg-4 order-md-last">
+        <h4 class="d-flex justify-content-between align-items-center mb-3">
+          <span class="text-primary">Seu carinho</span>
+          <span class="badge bg-primary rounded-pill">3</span>
+        </h4>
+        <ul class="list-group mb-3">
+          <li class="list-group-item d-flex justify-content-between lh-sm">
+            <div>
+              <h6 class="my-0">Mid Bacon</h6>
+              <small class="text-muted">molho separado</small>
+            </div>
+            <span class="text-muted">R$20,00</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between lh-sm">
+            <div>
+              <h6 class="my-0">Refrigerante 350ml</h6>
+              <small class="text-muted">Coca-cola</small>
+            </div>
+            <span class="text-muted">R$6,00</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between lh-sm">
+            <div>
+              <h6 class="my-0">Mid Onions</h6>
+              <small class="text-muted">sem observações</small>
+            </div>
+            <span class="text-muted">R$15,00</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between bg-light">
+            <div class="text-success">
+              <h6 class="my-0">Codigo promocional</h6>
+              <small>MIDLOVER</small>
+            </div>
+            <span class="text-success">−R$5,00</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between">
+            <span>Total (R$)</span>
+            <strong>R$36,00</strong>
+          </li>
+        </ul>
+
+      </body>
 </html>
