--- a/index.html
+++ b/index.html
@@ -127,5 +127,96 @@
           </li>
         </ul>
 
+        
+        <form class="card p-2">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Código promocional">
+            <button type="submit" class="btn btn-secondary">Resgatar</button>
+          </div>
+        </form>
+      </div>
+      <div class="col-md-7 col-lg-8">
+        <h4 class="mb-3">Endereço de cobrança</h4>
+        <form class="needs-validation" novalidate>
+          <div class="row g-3">
+            <div class="col-sm-6">
+              <label for="firstName" class="form-label">Nome</label>
+              <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+              <div class="invalid-feedback">
+                O primeiro nome é necessário.
+              </div>
+            </div>
+
+            <div class="col-sm-6">
+              <label for="lastName" class="form-label">Sobrenome</label>
+              <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+              <div class="invalid-feedback">
+                O sobrenome é necessário.
+              </div>
+            </div>
+
+            <div class="col-12">
+              <label for="username" class="form-label">Nome de usuário</label>
+              <div class="input-group has-validation">
+                <span class="input-group-text">@</span>
+                <input type="text" class="form-control" id="username" placeholder="Username" required>
+              <div class="invalid-feedback">
+                  O nome de usuário é necessário.
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12">
+              <label for="email" class="form-label">Email <span class="text-muted">(Opcional)</span></label>
+              <input type="email" class="form-control" id="email" placeholder="nome@exemplo.com">
+              <div class="invalid-feedback">
+                Por favor, coloque seu endereço de email para receber notificações de entrega.
+              </div>
+            </div>
+
+            <div class="col-12">
+              <label for="address" class="form-label">Endereço</label>
+              <input type="text" class="form-control" id="address" placeholder="Av. nome, n. 0000" required>
+              <div class="invalid-feedback">
+                Por favor, coloque seu endereço de entrega
+              </div>
+            </div>
+
+            <div class="col-12">
+              <label for="address2" class="form-label">Complemento <span class="text-muted">(Opcional)</span></label>
+              <input type="text" class="form-control" id="address2" placeholder="apartamento ou casa">
+            </div>
+
+            <div class="col-md-5">
+              <label for="country" class="form-label">País</label>
+              <select class="form-select" id="country" required>
+                <option value="">Escolha...</option>
+                <option>Brasil</option>
+              </select>
+              <div class="invalid-feedback">
+                Por favor, informe um país válido.
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <label for="state" class="form-label">Estado</label>
+              <select class="form-select" id="state" required>
+                <option value="">Escolha...</option>
+                <option>Ceará</option>
+              </select>
+              <div class="invalid-feedback">
+                Por favor, informe um estado válido.
+              </div>
+            </div>
+
+            <div class="col-md-3">
+              <label for="zip" class="form-label">CEP</label>
+              <input type="text" class="form-control" id="zip" placeholder="" required>
+              <div class="invalid-feedback">
+                O CEP é necessário.
+              </div>
+            </div>
+          </div>
+
       </body>
 </html>
