--- a/index.html
+++ b/index.html
@@ -66,11 +66,16 @@
       white-space: nowrap;
       -webkit-overflow-scrolling: touch;
     }
+
+    .container {
+      max-width: 960px;
+    }
+    
   </style>
 
 
   <!-- Custom styles for this template -->
-  <link href="form-validation.css" rel="stylesheet">
+ 
 </head>
 
 <body class="bg-light">
