exclusão de cadastro de pedido

--- a/index.html
+++ b/index.html
@@ -90,60 +90,11 @@
             style="border-radius: 10px;float:right; margin-top: 1%;margin-right: 1%;" type="button" data-toggle="modal"
             data-target="#modal-signup" display="inline-block" justify-content: space-around>Voltar</button></a>
 
-        <h2>Mid Carrinho</h2>
-        <p class="lead">Informe abaixo seus dados para pagamento e endereço de entrega. Não esqueça de conferir os produtos e quantidades no carrinho antes de finalizar o pagamento.</p>
+        <h2>Mid Burguer</h2>
+        <p class="lead">Cadastro de cliente e dados para pagamento .</p>
       </div>
 
-      <div class="row g-5">
-        <div class="col-md-5 col-lg-4 order-md-last">
-          <h4 class="d-flex justify-content-between align-items-center mb-3">
-            <span class="text-primary">Seu carinho</span>
-            <span class="badge bg-primary rounded-pill">3</span>
-          </h4>
-          <ul class="list-group mb-3">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-              <div>
-                <h6 class="my-0">Mid Bacon</h6>
-                <small class="text-muted">molho separado</small>
-              </div>
-              <span class="text-muted">R$20,00</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-              <div>
-                <h6 class="my-0">Refrigerante 350ml</h6>
-                <small class="text-muted">Coca-cola</small>
-              </div>
-              <span class="text-muted">R$6,00</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-              <div>
-                <h6 class="my-0">Mid Onions</h6>
-                <small class="text-muted">sem observações</small>
-              </div>
-              <span class="text-muted">R$15,00</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between bg-light">
-              <div class="text-success">
-                <h6 class="my-0">Codigo promocional</h6>
-                <small>MIDLOVER</small>
-              </div>
-              <span class="text-success">−R$5,00</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <span>Total (R$)</span>
-              <strong>R$36,00</strong>
-            </li>
-          </ul>
-
-
-          <form class="card p-2">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Código promocional">
-              <button type="submit" class="btn btn-secondary">Resgatar</button>
-            </div>
-          </form>
-        </div>
-        <div class="col-md-7 col-lg-8">
+      <div class="col-md-7 col-lg-8">
           <h4 class="mb-3">Cadastro cliente</h4>
           <form class="needs-validation" novalidate>
             <div class="row g-3">
@@ -195,7 +146,7 @@
 
             <hr class="my-4">
 
-           <h4 class="mb-3">Pagamento</h4>
+           <h4 class="mb-3">Cadastro de Dados para Pagamento</h4>
 
           <div class="my-3">
             <div class="form-check">
@@ -205,10 +156,6 @@
             <div class="form-check">
               <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required>
               <label class="form-check-label" for="debit">Cartão de débito</label>
-            </div>
-            <div class="form-check">
-              <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required>
-              <label class="form-check-label" for="paypal">PayPal</label>
             </div>
           </div>
 
