Exclusão de botão de "voltar"

--- a/index.html
+++ b/index.html
@@ -83,12 +83,9 @@
   <div class="container">
     <main>
       <div class="py-5 text-center">
-        <a href="cardapio.html"><button class="btn btn-light bg-dark-blur border-0 color-white btn-login-cadastro"
-            style="border-radius: 10px;float:right; margin-top: 1%;margin-right: 1%;" type="button" data-toggle="modal"
-            data-target="#modal-signup" display="inline-block" justify-content: space-around>Voltar</button></a>
-
+        
         <h2>Mid Burguer</h2>
-        <p class="lead">Cadastro de cliente e dados para pagamento .</p>
+       
       </div>
 
       <div class="col-md-7 col-lg-8">
@@ -192,7 +189,7 @@
           </div>
             <hr class="my-4">
 
-            <button class="w-100 btn btn-primary btn-lg" type="submit" id="submit">Realizar Pedido</button>
+            <button class="w-100 btn btn-primary btn-lg" type="submit" id="submit">Finalizar Cadastro</button>
           </form>
         </div>
       </div>
