--- a/produto.html
+++ b/produto.html
@@ -144,8 +144,7 @@
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
 
-  <script src="form-script.js"></script>
-  <script src="rotas-cliente.js"></script>
+   <script src="produto.js"></script>
   
 </body>
 
