Criação de botões para conexão de páginas

--- a/index.html
+++ b/index.html
@@ -83,6 +83,18 @@
 
         <h2>Mid Burguer</h2>
 
+        <div class="d-flex gap-2 justify-content-center py-5">
+         <a href="pedido.html">
+           <button class="btn btn-primary rounded-pill px-3" type="button">Cadastro Pedido</button>
+          </a> 
+          <a href="produto.html"> 
+          <button class="btn btn-primary rounded-pill px-3" type="button">Cadastro Produto</button>
+          </a>
+          
+
+
+        </div>
+
       </div>
 
       <!-- FORM PARA CADASTRO DE CLIENTE -->
@@ -96,13 +108,13 @@
 
             <div class="col-sm-6">
               <label for="firstName" class="form-label">Nome</label>
-              <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+              <input type="text" class="form-control" id="firstName" placeholder=" Maria" value="" required>
               <div class="invalid-feedback"> O primeiro nome é necessário.</div>
             </div>
 
             <div class="col-sm-6">
               <label for="lastName" class="form-label">Sobrenome</label>
-              <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+              <input type="text" class="form-control" id="lastName" placeholder="Silva" value="" required>
               <div class="invalid-feedback">
                 O sobrenome é necessário.
               </div>
@@ -129,9 +141,9 @@
               <input type="text" class="form-control" id="address2" placeholder="apartamento ou casa">
             </div>
 
-            <div class="col-md-3">
+            <div class="col-sm-6">
               <label for="zip" class="form-label">CEP</label>
-              <input type="text" class="form-control" id="zip" placeholder="" required>
+              <input type="text" class="form-control" id="zip" placeholder="00000-000" required>
               <div class="invalid-feedback">O CEP é necessário.</div>
             </div>
           </div>
@@ -173,7 +185,7 @@
 
             <div class="col-md-3">
               <label for="cc-expiration" class="form-label">Data de expiração</label>
-              <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
+              <input type="text" class="form-control" id="cc-expiration" placeholder="00/00" required>
               <div class="invalid-feedback">
                 É necessário informar data de vencimento
               </div>
@@ -210,8 +222,9 @@
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
 
-  <script src="form-script.js"></script>
-  <script src="rotas-cliente.js"></script>
+  <script src="form-validacao.jss"></script>
+  <script src="pagamento.js"></script>
+  <script src="cliente.js"></script>
 
 </body>
 
