Inclusão do script do html do pedido.

--- a/pedido.html
+++ b/pedido.html
@@ -144,8 +144,8 @@
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
 
-  <script src="form-script.js"></script>
-  <script src="rotas-cliente.js"></script>
+  
+  <script src="pedido.js"></script>
   
 </body>
 
